--- a/admin.html
+++ b/admin.html
@@ -40,10 +40,10 @@
                 </div>
                 <div class="pt-[22px] px-[42px] flex items-center justify-between mb-[40px]">
                     <label class="cursor-pointer flex items-center space-x-[15px] shadow-xl w-[377px] inline-block py-[11px] pl-[34px] rounded-[30px] bg-white">
-                        <input class="w-[80%] py-[8px] outline-none border-r-[2px] border-[#E6E6E6]" autocomplete="off" type="text" placeholder="Найти" name="searching">
+                        <input class="w-[80%] py-[8px] text-[22px] outline-none border-r-[2px] border-[#E6E6E6]" autocomplete="off" type="text" placeholder="Найти" name="searching">
                         <img src="./images/loupe.svg" alt="Loupe-Img" width="24" height="24">
                     </label>
-                    <button class="bg-[#009398] py-[15px] rounded-[30px] text-white text-[20px] w-[210px] hover:bg-white hover:text-[#009398] duration-300 hover:border-[1px] hover:border-[#009398]">+ Добавить продукт</button>
+                    <button onclick="handlAddProductBtnClick()" class="bg-[#009398] py-[15px] rounded-[30px] text-white text-[20px] w-[210px] hover:bg-white hover:text-[#009398] duration-300 hover:border-[1px] hover:border-[#009398]">+ Добавить продукт</button>
                 </div>
                 <ul class="flex items-center justify-center space-x-[46px]">
                     <li class="frame-title font-bold text-[25px] text-[#009398] pb-[8px] border-b-[2px] border-[#009398] cursor-pointer">Каркасные</li>
@@ -60,33 +60,15 @@
                                 <th class="py-[17px] text-[20px] text-start font-normal rounded-r-[30px]">Действия</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <img class="mx-auto" src="./images/pool-img.png" alt="Pool-Img" width="110" height="41">
-                                </td>
-                                <td class="text-start">
-                                    <span class="text-[12px] text-[#A6A6A6] relative before:absolute before:w-[100%] before:h-[1px] before:bg-[#FF0000] before:top-0 before:bottom-0  before:my-auto before:rotate-[5deg]">1.800.000 сум</span>
-                                    <br>
-                                    <span class="font-bold text-[18px]">1.520.000 сум</span>
-                                </td>
-                                <td class="text-[20px]">10</td>
-                                <td class="text-[20px]">Металлический</td>
-                                <td class="flex items-center space-x-[18px] h-[50px] rounded-[30px]">
-                                    <button>
-                                        <img src="./images/edit.svg" alt="Edit-Img" width="18" height="18">
-                                    </button>
-                                    <button>
-                                        <img src="./images/delete.svg" alt="Delete-Img" width="18" height="18">
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
+                        <tbody class="render-products">
+                         </tbody>
                     </table>
                 </div>
             </div>
         </div>
-
+        <div class="modal-wrapper duration-300 scale-0 fixed top-0 bottom-0 left-0 right-0 backdrop-blur" id="modal-wrapper">
+            <div id="modal-inner" class="modal-inner duration-300 w-[600px] left-0 right-0 m-auto rounded-lg shadow-xl bg-[#838996]"></div>
+        </div>
     <script src="js/Admin/admin.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
